Fix the alignments for headers.

--- a/style.css
+++ b/style.css
@@ -1,19 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body{
     font-family: Roboto;
-}
-
-.container{
-    display:flex;
-    flex-direction: column;
+    margin:0;
 }
 
 .header, .footer{
     background-color: #1F2937;
 }
 
-.main-header{
+.header{
     display:flex;
-    justify-content: space-between;
+    flex-direction: column;
+    padding-bottom: 100px;
+    align-items:center;
+}
+
+/*.main-header{
+    display:flex;
+    gap:500px;
+    margin-bottom:100px;
+}*/
+
+.main-header, .subheader{
+    display: flex;
+    padding: 0 350px 0 350px;
+}
+
+.main-header{
+    gap:300px;
 }
 
 .hero{
@@ -34,7 +49,6 @@ body{
 .logo{
     font-size: 24px;
     color:#F9FAF8;
-    display:flex;
 }
 
 .logo a{
@@ -67,19 +81,20 @@ ul{
 }
 
 .subheader{
-    display:flex;
-    gap:120px;
-    padding:20px;
+    align-items: center;
+    gap: 150px;
 }
 
 .subheader img{
     height:250px;
-    width: 640px;
+    width: 500px;
 }
 
 .hero-container{
     display: flex;
+    max-width: 300px;
     flex-direction: column;
-    height: 250px;
-    width: 640px;
+    padding:0;
+    margin:0;
+    gap:0;
 }
